[package]
name = "rust_with_asm"
version = "0.1.0"
authors = ["KrzysztofZawisla <32432944+KrzysztofZawisla@users.noreply.github.com>"]
edition = "2018"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0.3"